# fake_checker

./: .env.example  .gitignore  AUDIO_FEATURE_README.md  Makefile  README.md  REFACTORING_SUMMARY.md  TESTING_SUMMARY.md  call_to_action_keywords.json  clusterization_sample.py  config.py  config.yaml  controller.py  docker-compose.yml  examples.py  exceptions.py  fehner_processor.py  main.py  mainVsDbScan.ods  manager.py  neo4j_poc.py  pyproject.toml  requirements.txt  run_tests.py  singletons.py  testing_subjection.py  translation.py  trigger_keywords.json  trigger_topics.json  vectorizing.py  view.py
config/: CLAUDE.md  call_to_action_keywords.json  config.py  config.yaml  generalization_of_opponents.json  messiah.json  opposition_to_opponents.json  paths.py  trigger_keywords.json
core/: CLAUDE.md  __init__.py  core.py  dependency_injection.py  enums.py  evaluator_cache.py  optimized_manager.py  singletons.py  train.py
dal/: CLAUDE.md  dal.py  migrations.py
data/: center-harward-football-match.txt  den_braun.txt  dugin.txt  eva-vlaar.txt  hariss-confession.txt  kennedy-goodwill-tour.txt  lavrov.txt  lyons-pool-recreation-center.txt  math.txt  nova-scotia.txt  number-theory.txt  palannik.txt  puthin-west-threat.txt  putler.txt  ross-mihara.txt  rothshields.txt  scott-ritter.txt  shah_budak.txt  touchdown.txt  trump-speech.txt  wicked-gladiator.txt  yak.txt
databridge/: data_producer.py
exception/: exceptions.py
mapper/: mapper.py
migrations/: add_audio_metadata_table.sql
model/: model.py
processors/: CLAUDE.md  evaluation_context.py  fehner_processor.py  (+1 more)
(+108 files in other folders)
